Create basic Tic Tac Toe game layout hiiii

--- a/index.html
+++ b/index.html
@@ -1,1 +1,124 @@
-<h1>  helooo guyzzzz </h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Tic Tac Toe Game</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            background: #f2f2f2;
+        }
+
+        h1 {
+            margin-top: 20px;
+        }
+
+        .game {
+            display: grid;
+            grid-template-columns: repeat(3, 100px);
+            grid-gap: 10px;
+            justify-content: center;
+            margin-top: 30px;
+        }
+
+        .cell {
+            width: 100px;
+            height: 100px;
+            background: white;
+            font-size: 40px;
+            font-weight: bold;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+            border: 2px solid #333;
+        }
+
+        .cell:hover {
+            background: #e6e6e6;
+        }
+
+        button {
+            margin-top: 20px;
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
+        }
+    </style>
+</head>
+<body>
+
+<h1>Tic Tac Toe</h1>
+<p id="status">Player X's turn</p>
+
+<div class="game">
+    <div class="cell" onclick="makeMove(this)"></div>
+    <div class="cell" onclick="makeMove(this)"></div>
+    <div class="cell" onclick="makeMove(this)"></div>
+    <div class="cell" onclick="makeMove(this)"></div>
+    <div class="cell" onclick="makeMove(this)"></div>
+    <div class="cell" onclick="makeMove(this)"></div>
+    <div class="cell" onclick="makeMove(this)"></div>
+    <div class="cell" onclick="makeMove(this)"></div>
+    <div class="cell" onclick="makeMove(this)"></div>
+</div>
+
+<button onclick="resetGame()">Restart Game</button>
+
+<script>
+    let currentPlayer = "X";
+    let gameOver = false;
+    const statusText = document.getElementById("status");
+    const winPatterns = [
+        [0,1,2], [3,4,5], [6,7,8],
+        [0,3,6], [1,4,7], [2,5,8],
+        [0,4,8], [2,4,6]
+    ];
+
+    function makeMove(cell) {
+        if (cell.textContent !== "" || gameOver) return;
+
+        cell.textContent = currentPlayer;
+
+        if (checkWin()) {
+            statusText.textContent = `Player ${currentPlayer} wins! 🎉`;
+            gameOver = true;
+            return;
+        }
+
+        if (isDraw()) {
+            statusText.textContent = "It's a draw 😐";
+            gameOver = true;
+            return;
+        }
+
+        currentPlayer = currentPlayer === "X" ? "O" : "X";
+        statusText.textContent = `Player ${currentPlayer}'s turn`;
+    }
+
+    function checkWin() {
+        const cells = document.querySelectorAll(".cell");
+        return winPatterns.some(pattern => {
+            return pattern.every(index => {
+                return cells[index].textContent === currentPlayer;
+            });
+        });
+    }
+
+    function isDraw() {
+        const cells = document.querySelectorAll(".cell");
+        return [...cells].every(cell => cell.textContent !== "");
+    }
+
+    function resetGame() {
+        const cells = document.querySelectorAll(".cell");
+        cells.forEach(cell => cell.textContent = "");
+        currentPlayer = "X";
+        gameOver = false;
+        statusText.textContent = "Player X's turn";
+    }
+</script>
+
+</body>
+</html>
